# xf86-video-vmware

./: configure.ac
vmwgfx/: vmwgfx_driver.c  vmwgfx_output.c  vmwgfx_rr_inlines.h
